--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "predeploy":"npm run build",
-    "deploy":"gh-pages -d dist"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.2",
     "axios": "^1.7.9",
+    "flowbite": "^3.0.0",
     "flowbite-react": "^0.10.2",
     "formik": "^2.4.6",
     "gh-pages": "^6.3.0",
