--- a/package.json
+++ b/package.json
@@ -14,14 +14,17 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.2",
+    "@heroicons/react": "^2.2.0",
     "axios": "^1.7.9",
     "flowbite": "^3.0.0",
     "flowbite-react": "^0.10.2",
     "formik": "^2.4.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0",
     "react-router": "^7.1.3",
     "react-router-dom": "^7.1.3",
+    "swiper": "^11.2.1",
     "yup": "^1.6.1"
   },
   "devDependencies": {
